<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">R.Cook</string>
    <string name="welcome">Welcome</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>

</resources>